@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.106 2001/11/15 15:24:14 mike Exp $"
+ * "$Id: printers.c,v 1.107 2002/01/02 16:09:18 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -94,16 +94,8 @@ AddPrinter(const char *name)	/* I - Name of printer */
   p->accepting = 0;
   p->filetype  = mimeAddType(MimeDatabase, "printer", name);
 
-  if (Classification[0])
-  {
-    strcpy(p->job_sheets[0], Classification);
-    strcpy(p->job_sheets[1], Classification);
-  }
-  else
-  {
-    strcpy(p->job_sheets[0], "none");
-    strcpy(p->job_sheets[1], "none");
-  }
+  strcpy(p->job_sheets[0], "none");
+  strcpy(p->job_sheets[1], "none");
 
  /*
   * Setup required filters and IPP attributes...
@@ -616,31 +608,28 @@ LoadAllPrinters(void)
     }
     else if (strcmp(name, "JobSheets") == 0)
     {
-      if (!Classification[0])
-      {
-       /*
-	* Set the initial job sheets...
-	*/
+     /*
+      * Set the initial job sheets...
+      */
 
-	for (valueptr = value; *valueptr && !isspace(*valueptr); valueptr ++);
+      for (valueptr = value; *valueptr && !isspace(*valueptr); valueptr ++);
+
+      if (*valueptr)
+        *valueptr++ = '\0';
+
+      strncpy(p->job_sheets[0], value, sizeof(p->job_sheets[0]) - 1);
+
+      while (isspace(*valueptr))
+        valueptr ++;
+
+      if (*valueptr)
+      {
+        for (value = valueptr; *valueptr && !isspace(*valueptr); valueptr ++);
 
 	if (*valueptr)
           *valueptr++ = '\0';
 
-	strncpy(p->job_sheets[0], value, sizeof(p->job_sheets[0]) - 1);
-
-	while (isspace(*valueptr))
-          valueptr ++;
-
-	if (*valueptr)
-	{
-          for (value = valueptr; *valueptr && !isspace(*valueptr); valueptr ++);
-
-	  if (*valueptr)
-            *valueptr++ = '\0';
-
-	  strncpy(p->job_sheets[1], value, sizeof(p->job_sheets[1]) - 1);
-	}
+	strncpy(p->job_sheets[1], value, sizeof(p->job_sheets[1]) - 1);
       }
     }
     else if (strcmp(name, "AllowUser") == 0)
@@ -936,7 +925,7 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 
     if ((auth = FindBest(resource, HTTP_POST)) != NULL)
     {
-      if (auth->type == AUTH_BASIC)
+      if (auth->type == AUTH_BASIC || auth->type == AUTH_BASICDIGEST)
 	auth_supported = "basic";
       else if (auth->type == AUTH_DIGEST)
 	auth_supported = "digest";
@@ -1064,8 +1053,10 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 
       if (attr != NULL)
       {
-	attr->values[0].string.text = strdup(p->job_sheets[0]);
-	attr->values[1].string.text = strdup(p->job_sheets[1]);
+	attr->values[0].string.text = strdup(Classification[0] ?
+	                                     Classification : p->job_sheets[0]);
+	attr->values[1].string.text = strdup(Classification[0] ?
+	                                     Classification : p->job_sheets[1]);
       }
     }
   }
@@ -1812,5 +1803,5 @@ write_printcap(void)
 
 
 /*
- * End of "$Id: printers.c,v 1.106 2001/11/15 15:24:14 mike Exp $".
+ * End of "$Id: printers.c,v 1.107 2002/01/02 16:09:18 mike Exp $".
  */
